fix: testing shader jump

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,7 +86,8 @@ button {
   background-color: var(--ifm-color-emphasis-200) !important;
 }
 
-.shader-canvas {
+.shader-canvas,
+.shader-placeholder {
   top: 0;
   backface-visibility: hidden;
   perspective: 1000;
@@ -299,13 +300,15 @@ table tr {
 }
 
 @media only screen and (max-width: 1024px) {
-  .shader-canvas {
+  .shader-canvas,
+  .shader-placeholder {
     height: 412px;
   }
 }
 
 @media only screen and (max-width: 800px) {
-  .shader-canvas {
+  .shader-canvas,
+  .shader-placeholder {
     height: 388px;
   }
 }
